trakt-macros/tests/ui/request/missing_trakt_attr.rs
#[derive(Debug, Clone, trakt_macros::Request)]
pub struct Request {
    pub id: String,
}

fn main() {}
